# test-aubo-sdk

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
usr/include/: AuboRobotMetaType.h  communicationmatetype.h  ikfunc.h  protoencodedecode.h  robotcommon.pb.h  robotcontrolservices.h  robotioservice.h  robotmovecondition.pb.h  robotmoveservice.h  robotutilservice.h  serviceinterface.h
usr/lib/: libaubo_sdk_d.so.2
